day2 task completed html and css revision

--- a/day2/index.html
+++ b/day2/index.html
@@ -21,7 +21,8 @@
         </div>
       </div>
       <div class="btn">
-        <button>Learn More</button>
+        <a href=""><button>Learn More</button></a>
+        
       </div>
     </div>
   </body>
