resolve conflit of merging github branch

--- a/day2/index.html
+++ b/day2/index.html
@@ -21,8 +21,7 @@
         </div>
       </div>
       <div class="btn">
-        <a href=""><button>Learn More</button></a>
-        
+        <button>Learn More</button>
       </div>
     </div>
   </body>
