day11 task completed

--- a/day11/index.html
+++ b/day11/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <style>
-        div{
-            width: 300px;
-            height: 300px;
+        .secondDiv{
+            width:200px;
+            height: 100px;
             background-color: cyan;
         }
     </style>
 </head>
 <body>
     
-    <div id="contain"></div>
-    <button id="changeColor">Change Color</button>
-    <button id="changePos">Change Position</button>
+
+    <div id="outerdiv">
+        <h1>Heading1</h1>
+        <h1>Sub heading1</h1>
+        <h2>Heading2</h2>
+    </div>
+
+    <button id="changeBtn">Change background</button>
+
+    <div class="secondDiv">
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
